# devops

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LLM.md  README.md  deploy-all.sh
.github/workflows/: docker.yml  operator.yml  test-and-release.yml
bench/: Cargo.toml
bench/src/: main.rs
benchup/: Cargo.toml
benchup/src/: apply.rs  default_spec.rs  delete.rs  main.rs  query.rs  spec.rs
charts/blockscout/: Chart.yaml  values-devnet.yaml  values-mainnet.yaml  values-testnet.yaml  values.yaml
charts/blockscout/templates/: backend.yaml  frontend.yaml  ingress.yaml  microservices.yaml  postgres.yaml
charts/exchange/: Chart.yaml  values.yaml
charts/exchange/templates/: deployment.yaml  ingress.yaml  redis.yaml  services.yaml
charts/lux/: Chart.yaml  values-devnet.yaml  values-mainnet.yaml  values-testnet.yaml  values.yaml
charts/lux/genesis/: devnet.json  mainnet.json  testnet.json
charts/lux/templates/: configmap.yaml  namespace.yaml  rbac.yaml  services.yaml  startup-configmap.yaml  statefulset.yaml
charts/luxd/: Chart.yaml  values.yaml
charts/luxd/genesis/: devnet.json  mainnet.json  testnet.json
charts/luxd/templates/: configmap.yaml  namespace.yaml  services.yaml  statefulset.yaml
k8s/base/: namespace.yaml
k8s/hanzo/: README.md
k8s/hanzo/services/bot-site/: SYNCED_FROM.txt  deployment.yaml  kms-secrets-per-org.template.yaml  kms-secrets.yaml
k8s/operator/: bridge.yaml  deploy-infra.sh  deploy.sh  deployment.yaml  explorer-devnet.yaml  explorer-mainnet.yaml  explorer-testnet.yaml  gateway-devnet.yaml  gateway-testnet.yaml  indexers-dag-devnet.yaml  indexers-dag-mainnet.yaml  indexers-devnet.yaml  kms-proxy.yaml  service.yaml
k8s/operator/networks/: devnet.yaml  mainnet.yaml  testnet.yaml
k8s/operator/rbac/: clusterrole.yaml
lux-core/: Cargo.toml  README.md
lux-core/src/: artifacts.rs  config.rs  k8s.rs  lib.rs  spec.rs  types.rs
lux-core/src/aws/: cfn.rs  luxd.rs  mod.rs
lux-faucet/: Cargo.toml
lux-faucet/src/: main.rs
lux-operator/: Cargo.toml  Dockerfile
lux-operator/src/: controller.rs  crd.rs  error.rs  main.rs
luxd/: Cargo.toml
luxd/src/: agent.rs  install.rs  main.rs
luxup/: Cargo.toml  recipes-aws-advanced.md  recipes-aws.md
luxup/src/: apply.rs  default_spec.rs  delete.rs  endpoints.rs  main.rs  validators.rs
staking-key-downloader/: Cargo.toml
staking-key-downloader/src/: main.rs
staking-signer-downloader/: Cargo.toml
staking-signer-downloader/src/: main.rs
