[package]
name = "blizzard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lux Network load testing agent"

[[bin]]
name = "blizzard"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AWS
aws-config = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Crypto
ring = "0.17"
hex = "0.4"

# Utils
anyhow = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
