[package]
name = "blizzardup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lux Network load testing control plane"

[[bin]]
name = "blizzardup"
path = "src/main.rs"

[dependencies]
lux-core = { path = "../lux-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AWS
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-cloudformation = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Utils
anyhow = { workspace = true }
rand = { workspace = true }
rust-embed = "8.2"
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
