[package]
name = "lux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lux Network operations core library"
readme = "README.md"

[dependencies]
# Lux types - TODO: replace with lux-types crate when available
primitive-types = { version = "0.12", features = ["impl-serde"] }

# AWS SDK (modern versions)
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-cloudformation = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
aws-sdk-ssm = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sdk-kms = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { version = "3.4", features = ["hex"] }

# Logging
tracing = { workspace = true }

# Utils
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bs58 = { version = "0.5", features = ["check"] }
rust-embed = "8.2"

[dev-dependencies]
tempfile = { workspace = true }
