[package]
name = "lux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lux Network operations core library"
readme = "README.md"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utils
thiserror = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
bs58 = { version = "0.5", features = ["check"] }
rust-embed = "8.2"

[dev-dependencies]
tempfile = { workspace = true }
