[package]
name = "luxd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lux Network daemon agent for cloud deployments"

[[bin]]
name = "luxd-daemon"
path = "src/main.rs"

[dependencies]
lux-core = { path = "../lux-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }

# Utils
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
libc = "0.2"
